tests/negative/struct_errors/undefined_field.nano
# Expected Error: Undefined struct field

struct Point {
    x: int
    y: int
}

fn main() -> int {
    let p: Point = Point { x: 10, y: 20 }
    let z: int = p.z  # Error: field 'z' does not exist in Point
    return z
}

shadow main {
    assert (== (main) 0)
}
